--- a/analysis/1-prepare.Rmd
+++ b/analysis/1-prepare.Rmd
@@ -14,7 +14,7 @@ library (tidyverse)
 library (rmatio)
 library (pracma)
 library (ggforce)
-
+library (ggmatplot)
 ```
 
 # Import
@@ -97,10 +97,10 @@ for (n in 1:nrow (df_walk)) {
 df_walk_stance <- df_walk_stance %>%
   select (-c(`V52`:`V101`))
 
-saveRDS(list (df_walk = df_walk,
-              df_run = df_run,
-              df_walk_stance = df_walk_stance),
-        "data/tidy_data.RDS")
+# saveRDS(list (df_walk = df_walk,
+#               df_run = df_run,
+#               df_walk_stance = df_walk_stance),
+#         "data/tidy_data.RDS")
 ```
 
 
@@ -108,7 +108,7 @@ saveRDS(list (df_walk = df_walk,
 
 ```{r}
 
-create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang") {
+create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang", ylab) {
   
   
   df_plot <- x %>%
@@ -126,12 +126,12 @@ create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang
   
   f1 <- ggmatplot(t(l_df), plot_type = "line", color = "black", linetype = 1) +
     theme(legend.position = "none") +
-    ylab (ylab_label) +
+    ylab (ylab) +
     xlab ("Cycle")
   
   f2 <- ggmatplot(t(r_df), plot_type = "line", color = "black", linetype = 1) +
     theme(legend.position = "none") +
-    ylab (ylab_label) +
+    ylab (ylab) +
     xlab ("Cycle")
   
   cowplot::plot_grid(f1, f2, labels = c("L", "R"))
@@ -146,38 +146,38 @@ create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang
 ```{r}
 # Ankle angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "JR")
-f3 <- create_plot (x = df_run, joint = "Ankle", ax = "Y", variables = "JR")
-f4 <- create_plot (x = df_run, joint = "Ankle", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF (+)-PF (-) (°)")
+f2 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle AP JCF (BW)")
+f3 <- create_plot (x = df_run, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle VT JCF (BW)")
+f4 <- create_plot (x = df_run, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle ML JCF (BW)")
 
-tiff ("output/run_ankle_plot.tiff", height = 8, width = 6, res = 100, units = "in")
+tiff ("output/run_ankle_plot.tiff", height = 12, width = 8, res = 100, units = "in")
 cowplot::plot_grid (f1, f2, f3, f4, ncol = 1)
 dev.off()
 
 # knee angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "ang")
-f3 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "ang")
-f4 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "JR")
-f5 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "JR")
-f6 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex (+)-Ext (-) (°)")
+f2 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add (+)-Abd (-) (°)")
+f3 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR (+)-ER (-) (°)")
+f4 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee AP JCF (BW)")
+f5 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee VT JCF (BW)")
+f6 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee ML JCF (BW)")
 
-tiff ("output/run_knee_plot.tiff", height = 12, width = 6, res = 100, units = "in")
+tiff ("output/run_knee_plot.tiff", height = 14, width = 8, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 
 # hip angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "ang")
-f3 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "ang")
-f4 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "JR")
-f5 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "JR")
-f6 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex (+)-Ext (-) (°)") 
+f2 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add (+)-Abd (-) (°)")
+f3 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR (+)-ER (-) (°)")
+f4 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip AP JCF (BW)")
+f5 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip VT JCF (BW)")
+f6 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip ML JCF (BW)")
 
-tiff ("output/run_hip_plot.tiff", height = 12, width = 6, res = 100, units = "in")
+tiff ("output/run_hip_plot.tiff", height = 14, width = 8, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 ```
@@ -187,38 +187,38 @@ dev.off()
 ```{r}
 # Ankle angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "JR")
-f3 <- create_plot (x = df_walk, joint = "Ankle", ax = "Y", variables = "JR")
-f4 <- create_plot (x = df_walk, joint = "Ankle", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF (+)-PF (-) (°)")
+f2 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle AP JCF (BW)")
+f3 <- create_plot (x = df_walk, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle VT JCF (BW)")
+f4 <- create_plot (x = df_walk, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle ML JCF (BW)")
 
-tiff ("output/walk_ankle_plot.tiff", height = 8, width = 6, res = 100, units = "in")
+tiff ("output/walk_ankle_plot.tiff", height = 12, width = 8, res = 100, units = "in")
 cowplot::plot_grid (f1, f2, f3, f4, ncol = 1)
 dev.off()
 
 # knee angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "ang")
-f3 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "ang")
-f4 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "JR")
-f5 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "JR")
-f6 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex (+)-Ext (-) (°)")
+f2 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add (+)-Abd (-) (°)")
+f3 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR (+)-ER (-) (°)")
+f4 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee AP JCF (BW)")
+f5 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee VT JCF (BW)")
+f6 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee ML JCF (BW)")
 
-tiff ("output/walk_knee_plot.tiff", height = 12, width = 6, res = 100, units = "in")
+tiff ("output/walk_knee_plot.tiff", height = 14, width = 8, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 
 # hip angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "ang")
-f2 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "ang")
-f3 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "ang")
-f4 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "JR")
-f5 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "JR")
-f6 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "JR")
+f1 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex (+)-Ext (-) (°)") 
+f2 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add (+)-Abd (-) (°)")
+f3 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR (+)-ER (-) (°)")
+f4 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip AP JCF (BW)")
+f5 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip VT JCF (BW)")
+f6 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip ML JCF (BW)")
 
-tiff ("output/walk_hip_plot.tiff", height = 12, width = 6, res = 100, units = "in")
+tiff ("output/walk_hip_plot.tiff", height = 14, width = 8, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 ```
