--- a/analysis/1-prepare.Rmd
+++ b/analysis/1-prepare.Rmd
@@ -97,10 +97,44 @@ for (n in 1:nrow (df_walk)) {
 df_walk_stance <- df_walk_stance %>%
   select (-c(`V52`:`V101`))
 
-# saveRDS(list (df_walk = df_walk,
-#               df_run = df_run,
-#               df_walk_stance = df_walk_stance),
-#         "data/tidy_data.RDS")
+# Pre-multiply by -1
+df_walk2 <- df_walk %>%
+  #filter (jt == "Knee" & axes == "Z" & varz == "ang" & side == "r") %>%
+  pivot_longer(cols = c("V1": "V101"),
+               names_to = "cycle",
+               values_to = "val") %>%
+  mutate (val = ifelse (jt == "Knee" & axes == "Z" & varz %in% c("ang", "M") & side == "l", 
+                   val * -1, val)) %>%
+  pivot_wider (names_from = "cycle",
+               values_from = "val")
+
+# Pre-multiply by -1
+df_walk_stance2 <- df_walk_stance %>%
+  #filter (jt == "Knee" & axes == "Z" & varz == "ang" & side == "r") %>%
+  pivot_longer(cols = c("V1": "V51"),
+               names_to = "cycle",
+               values_to = "val") %>%
+  mutate (val = ifelse (jt == "Knee" & axes == "Z" & varz %in% c("ang", "M") & side == "l", 
+                   val * -1, val)) %>%
+  pivot_wider (names_from = "cycle",
+               values_from = "val")
+
+# Pre-multiply by -1
+df_run2 <- df_run %>%
+  #filter (jt == "Knee" & axes == "Z" & varz == "ang" & side == "r") %>%
+  pivot_longer(cols = c("V1": "V51"),
+               names_to = "cycle",
+               values_to = "val") %>%
+  mutate (val = ifelse (jt == "Knee" & axes == "Z" & varz %in% c("ang", "M") & side == "l", 
+                   val * -1, val)) %>%
+  pivot_wider (names_from = "cycle",
+               values_from = "val")
+
+
+saveRDS(list (df_walk = df_walk2,
+              df_run = df_run2,
+              df_walk_stance = df_walk_stance2),
+        "data/tidy_data.RDS")
 ```
 
 
@@ -114,27 +148,19 @@ create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang
   df_plot <- x %>%
     filter (jt == joint & axes == ax & varz == variables) 
   
-  ylab_label <- paste0( c(joint, ax, variables), collapse = "_")
+  sides <- df_plot$side
+  colr <- ifelse (sides == "l", "red", "blue") # left = red, right = blue
   
-  l_df <- df_plot %>%
-    filter (side == "l") %>%
+  df_plot2 <- df_plot %>%
     select (starts_with("V", ignore.case = FALSE))
   
-  r_df <- df_plot %>%
-    filter (side == "r") %>%
-    select (starts_with("V", ignore.case = FALSE))  
   
-  f1 <- ggmatplot(t(l_df), plot_type = "line", color = "black", linetype = 1) +
+  
+    ggmatplot(t(df_plot2), plot_type = "line", color = colr, linetype = 1) +
+    cowplot::theme_cowplot() + 
     theme(legend.position = "none") +
     ylab (ylab) +
     xlab ("Cycle")
-  
-  f2 <- ggmatplot(t(r_df), plot_type = "line", color = "black", linetype = 1) +
-    theme(legend.position = "none") +
-    ylab (ylab) +
-    xlab ("Cycle")
-  
-  cowplot::plot_grid(f1, f2, labels = c("L", "R"))
   
 }
 
@@ -146,38 +172,38 @@ create_plot <- function (x = df_run, joint = "Ankle", ax = "X", variables = "ang
 ```{r}
 # Ankle angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF (+)-PF (-) (°)")
-f2 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle AP JCF (BW)")
-f3 <- create_plot (x = df_run, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle VT JCF (BW)")
-f4 <- create_plot (x = df_run, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle ML JCF (BW)")
+f1 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF(+) (°)")
+f2 <- create_plot (x = df_run, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle Ant(+) Force (BW)")
+f3 <- create_plot (x = df_run, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle Dis(+) Force (BW)")
+f4 <- create_plot (x = df_run, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle Lat(+) Force (BW)")
 
-tiff ("output/run_ankle_plot.tiff", height = 12, width = 8, res = 100, units = "in")
+tiff ("output/run_ankle_plot.tiff", height = 12, width = 6, res = 100, units = "in")
 cowplot::plot_grid (f1, f2, f3, f4, ncol = 1)
 dev.off()
 
 # knee angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex (+)-Ext (-) (°)")
-f2 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add (+)-Abd (-) (°)")
-f3 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR (+)-ER (-) (°)")
-f4 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee AP JCF (BW)")
-f5 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee VT JCF (BW)")
-f6 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee ML JCF (BW)")
+f1 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex(+) (°)")
+f2 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add(+) (°)")
+f3 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR(+) (°)")
+f4 <- create_plot (x = df_run, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee Ant(+) Force (BW)")
+f5 <- create_plot (x = df_run, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee Dis(+) Force (BW)")
+f6 <- create_plot (x = df_run, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee Lat(+) Force (BW)")
 
-tiff ("output/run_knee_plot.tiff", height = 14, width = 8, res = 100, units = "in")
+tiff ("output/run_knee_plot.tiff", height = 14, width = 6, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 
 # hip angle and JCF
 
-f1 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex (+)-Ext (-) (°)") 
-f2 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add (+)-Abd (-) (°)")
-f3 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR (+)-ER (-) (°)")
-f4 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip AP JCF (BW)")
-f5 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip VT JCF (BW)")
-f6 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip ML JCF (BW)")
+f1 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex(+) (°)") 
+f2 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add(+) (°)")
+f3 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR(+) (°)")
+f4 <- create_plot (x = df_run, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip Ant(+) Force (BW)")
+f5 <- create_plot (x = df_run, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip Dis(+) Force (BW)")
+f6 <- create_plot (x = df_run, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip Lat(+) Force (BW)")
 
-tiff ("output/run_hip_plot.tiff", height = 14, width = 8, res = 100, units = "in")
+tiff ("output/run_hip_plot.tiff", height = 14, width = 6, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 ```
@@ -187,38 +213,38 @@ dev.off()
 ```{r}
 # Ankle angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF (+)-PF (-) (°)")
-f2 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle AP JCF (BW)")
-f3 <- create_plot (x = df_walk, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle VT JCF (BW)")
-f4 <- create_plot (x = df_walk, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle ML JCF (BW)")
+f1 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "ang", ylab = "Ankle DF(+) (°)")
+f2 <- create_plot (x = df_walk, joint = "Ankle", ax = "X", variables = "JR", ylab = "Ankle Ant(+) Force (BW)")
+f3 <- create_plot (x = df_walk, joint = "Ankle", ax = "Y", variables = "JR", ylab = "Ankle Dis(+) Force (BW)")
+f4 <- create_plot (x = df_walk, joint = "Ankle", ax = "Z", variables = "JR", ylab = "Ankle Lat(+) Force (BW)")
 
-tiff ("output/walk_ankle_plot.tiff", height = 12, width = 8, res = 100, units = "in")
+tiff ("output/walk_ankle_plot.tiff", height = 12, width = 6, res = 100, units = "in")
 cowplot::plot_grid (f1, f2, f3, f4, ncol = 1)
 dev.off()
 
 # knee angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex (+)-Ext (-) (°)")
-f2 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add (+)-Abd (-) (°)")
-f3 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR (+)-ER (-) (°)")
-f4 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee AP JCF (BW)")
-f5 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee VT JCF (BW)")
-f6 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee ML JCF (BW)")
+f1 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "ang", ylab = "Knee Flex(+) (°)")
+f2 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "ang", ylab = "Knee Add(+) (°)")
+f3 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "ang", ylab = "Knee IR(+) (°)")
+f4 <- create_plot (x = df_walk, joint = "Knee", ax = "X", variables = "JR", ylab = "Knee Ant(+) Force (BW)")
+f5 <- create_plot (x = df_walk, joint = "Knee", ax = "Y", variables = "JR", ylab = "Knee Dis(+) Force (BW)")
+f6 <- create_plot (x = df_walk, joint = "Knee", ax = "Z", variables = "JR", ylab = "Knee Lat(+) Force (BW)")
 
-tiff ("output/walk_knee_plot.tiff", height = 14, width = 8, res = 100, units = "in")
+tiff ("output/walk_knee_plot.tiff", height = 14, width = 6, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 
 # hip angle and JCF
 
-f1 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex (+)-Ext (-) (°)") 
-f2 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add (+)-Abd (-) (°)")
-f3 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR (+)-ER (-) (°)")
-f4 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip AP JCF (BW)")
-f5 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip VT JCF (BW)")
-f6 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip ML JCF (BW)")
+f1 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "ang", ylab = "Hip Flex(+) (°)") 
+f2 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "ang", ylab = "Hip Add(+) (°)")
+f3 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "ang", ylab = "Hip IR(+) (°)")
+f4 <- create_plot (x = df_walk, joint = "Hip", ax = "X", variables = "JR", ylab = "Hip Ant(+) Force (BW)")
+f5 <- create_plot (x = df_walk, joint = "Hip", ax = "Y", variables = "JR", ylab = "Hip Dis(+) Force (BW)")
+f6 <- create_plot (x = df_walk, joint = "Hip", ax = "Z", variables = "JR", ylab = "Hip Lat(+) Force (BW)")
 
-tiff ("output/walk_hip_plot.tiff", height = 14, width = 8, res = 100, units = "in")
+tiff ("output/walk_hip_plot.tiff", height = 14, width = 6, res = 100, units = "in")
   cowplot::plot_grid (f1, f2, f3, f4, f5, f6, ncol = 1)
 dev.off()
 ```
