--- a/analysis/2-ML_same.Rmd
+++ b/analysis/2-ML_same.Rmd
@@ -344,6 +344,8 @@ for (m in seq_along (jr_var)) {
     y_train_run <- o_run [train_ind, ]
     y_val_run <- o_run [val_ind, ]
     y_test_run <- o_run [test_ind, ]
+	
+	# Code using fastai, calling python from R
     
     splits = tsai$combine_split_data(list (x_train_run , x_val_run), list (y_train_run, y_val_run))
     tfms  = list (NULL, tsai$TSRegression)
@@ -527,7 +529,7 @@ prow <- cowplot::plot_grid(
 
 legend <- cowplot::get_legend(f1 + theme(legend.box.margin = margin(0, 0, 0, 12)) )
 
-tiff ("output/fig_same_perf.tiff", units = "in", height = 7, width = 17, res = 100)
+tiff ("manuscript/fig5_same_perf.tiff", units = "in", height = 7, width = 17, res = 100)
 cowplot::plot_grid(prow, legend, rel_widths = c(3, .4))
 dev.off()
 ```
@@ -738,9 +740,9 @@ legend <- cowplot::get_legend(f1 +
     guides(color = guide_legend(nrow = 1)) +
     theme(legend.position = "bottom"))
 
-# tiff ("output/fig_same_curv.tiff", units = "in", height = 15, width = 10, res = 100)
-# cowplot::plot_grid(prow, legend, ncol = 1, rel_heights = c(1, .1))
-# dev.off()
+tiff ("manuscript/fig2_same_curv.tiff", units = "in", height = 15, width = 10, res = 100)
+cowplot::plot_grid(prow, legend, ncol = 1, rel_heights = c(1, .1))
+dev.off()
 
 export_df <- error_df %>%
   group_by(outcomes,type) %>%
@@ -750,8 +752,8 @@ export_df <- error_df %>%
   mutate_if (is.numeric, round, 2) %>%
   arrange (type)
 
-# writexl::write_xlsx (list( Same = export_df),
-#                      "manuscript/supp_mat_same.xlsx")
+writexl::write_xlsx (list( Same = export_df),
+                     "manuscript/supp_mat_same.xlsx")
 ```
 
 # Reporting
